Test Class for large bn

--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,4 @@ examples/data
 p_0.01_LL_cancer_17_custom_crossover_exchange_edges.pdf
 examples/pictures/V0custom_crossover_exchange_edges.png
 examples/pictures/
+.vscode/settings.json
